add gif to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -165,8 +165,9 @@ tags
 # DS_Store (MacOS)
 .DS_Store
 
-# RL pipelines may produce mp4 outputs
+# RL pipelines may produce mp4 or gif outputs
 *.mp4
+*.gif
 
 # dependencies
 /transformers
